--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
     "liveSassCompile.settings.formats": [
         {
-            "format": "expanded",
-            // "format": "compressed",
+            "format": "compressed",
             "extensionName": ".css",
             "savePath": "/css"
         },
